res(localization): Added Localized Strings to app

--- a/common/lib/l10n/intl_en.arb
+++ b/common/lib/l10n/intl_en.arb
@@ -1,3 +1,9 @@
 {
-  "applicationName": "Movies App"
+  "applicationName": "Moviezta",
+
+
+  "popular": "Popular",
+  "newAndHot": "New & Hot",
+  "premiers": "Premiers",
+  "discover": "Discover"
 }
