res(Localization): Add filter and sort localized strings

--- a/common/lib/l10n/intl_en.arb
+++ b/common/lib/l10n/intl_en.arb
@@ -5,5 +5,7 @@
   "popular": "Popular",
   "newAndHot": "New & Hot",
   "premiers": "Premiers",
-  "discover": "Discover"
+  "discover": "Discover",
+  "sort": "Sort",
+  "filter": "Filter"
 }
