res(localization): Add ErrorLoadingImage strings

--- a/common/lib/l10n/intl_en.arb
+++ b/common/lib/l10n/intl_en.arb
@@ -7,5 +7,6 @@
   "premiers": "Premiers",
   "discover": "Discover",
   "sort": "Sort",
-  "filter": "Filter"
+  "filter": "Filter",
+  "errorLoadingImage": "Error Loading Image"
 }
